--- a/.README.md
+++ b/.README.md
@@ -17,7 +17,7 @@ npm install --save-dev projectz coffee-script joe joe-reporter-console chai
 ## History
 
 - v1.2.0 October 25, 2013
-  - Ambandoned the Cakefile setup for npm package scripts
+  - Abandoned the Cakefile setup for npm package scripts
 
 - v1.1.3 October 2, 2013
   - Don't use the `bare` option to compile coffeescript, it pollutes the global namespace
