--- a/.README.md
+++ b/.README.md
@@ -19,7 +19,7 @@ npm install --save-dev projectz coffee-script joe joe-reporter-console chai
 - v1.2.0 October 25, 2013
   - Abandoned the Cakefile setup for npm package scripts
 
-- v1.1.3 October 2, 2013
+- [v1.1.3 October 2, 2013](https://gist.github.com/balupton/6409278/8e84ec360b269439f8b29462012cabaa8a694ffe)
   - Don't use the `bare` option to compile coffeescript, it pollutes the global namespace
 
 - v1.1.2 September 2, 2013
